RubyCompiler/parser.output
Terminals unused in grammar

    NEW
    OPEN_CURLY_BRACKET
    CLOSE_CURLY_BRACKET
    COMMERCIAL_AT
    CLASS_NAME
    CLASS_VAR_NAME


Grammar

    0 $accept: program $end

    1 program: program_items_list

    2 program_item: stmt
    3             | def_method_stmt
    4             | class_declaration

    5 program_items_list_not_empty: program_item
    6                             | program_items_list_not_empty program_item

    7 program_items_list: %empty
    8                   | program_items_list_not_empty

    9 expr: INTEGER_NUMBER
   10     | FLOAT_NUMBER
   11     | STR
   12     | TRUE
   13     | FALSE
   14     | SUPER
   15     | LOGICAL_NOT_OP new_lines_op expr
   16     | ARITHMETIC_PLUS_OP new_lines_op expr
   17     | expr ARITHMETIC_POW_OP new_lines_op expr
   18     | ARITHMETIC_MINUS_OP new_lines_op expr
   19     | expr ARITHMETIC_MUL_OP new_lines_op expr
   20     | expr ARITHMETIC_DIV_OP new_lines_op expr
   21     | expr ARITHMETIC_MOD_OP new_lines_op expr
   22     | expr ARITHMETIC_PLUS_OP new_lines_op expr
   23     | expr ARITHMETIC_MINUS_OP new_lines_op expr
   24     | expr GREATER_OP new_lines_op expr
   25     | expr LESS_OP new_lines_op expr
   26     | expr GREATER_OR_EQL_OP new_lines_op expr
   27     | expr LESS_OR_EQL_OP new_lines_op expr
   28     | expr COMB_COMPRASION_OP new_lines_op expr
   29     | expr EQL_OP new_lines_op expr
   30     | expr CASE_EQL_OP new_lines_op expr
   31     | expr NOT_EQL_OP new_lines_op expr
   32     | expr LOGICAL_AND_OP new_lines_op expr
   33     | expr LOGICAL_OR_OP new_lines_op expr
   34     | expr INCLUSIVE_RANGE_OP new_lines_op expr
   35     | expr EXCLUSIVE_RANGE_OP new_lines_op expr
   36     | expr ASSIGN_OP new_lines_op expr
   37     | expr UNTIL new_lines_op expr
   38     | expr WHILE new_lines_op expr
   39     | DEFINED new_lines_op expr
   40     | NOT new_lines_op expr
   41     | expr AND new_lines_op expr
   42     | expr OR new_lines_op expr
   43     | OPEN_ROUND_BRACKET new_lines_op expr CLOSE_ROUND_BRACKET
   44     | expr OPEN_SQUARE_BRACKET new_lines_op expr CLOSE_SQUARE_BRACKET
   45     | OPEN_SQUARE_BRACKET new_lines_op expr_list CLOSE_SQUARE_BRACKET
   46     | VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET new_lines_op expr_list CLOSE_ROUND_BRACKET
   47     | SUPER OPEN_ROUND_BRACKET new_lines_op expr_list CLOSE_ROUND_BRACKET
   48     | VAR_OR_METHOD_NAME
   49     | INSTANCE_VAR_NAME
   50     | expr DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME
   51     | expr DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET
   52     | SELF DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME
   53     | SELF DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET

   54 stmt_ends: SEMICOLON_SYMBOL
   55          | NEW_LINE_SYMBOL
   56          | SEMICOLON_SYMBOL stmt_ends
   57          | NEW_LINE_SYMBOL stmt_ends

   58 new_lines_op: %empty
   59             | new_lines

   60 new_lines: NEW_LINE_SYMBOL
   61          | NEW_LINE_SYMBOL new_lines

   62 stmt_ends_op: %empty
   63             | stmt_ends

   64 stmt: expr stmt_ends
   65     | stmt_block stmt_ends_op
   66     | if_stmt stmt_ends_op
   67     | for_stmt stmt_ends_op
   68     | while_stmt stmt_ends_op
   69     | until_stmt stmt_ends_op
   70     | RETURN expr stmt_ends
   71     | RETURN stmt_ends

   72 stmt_list_not_empty: stmt
   73                    | stmt_list_not_empty stmt

   74 stmt_list: %empty
   75          | stmt_list_not_empty

   76 stmt_block: BEGIN_KEYWORD stmt_ends_op stmt_list END

   77 if_start_stmt: IF new_lines_op expr stmt_ends stmt_list
   78              | IF new_lines_op expr SEMICOLON_SYMBOL new_lines_op THEN stmt_ends_op stmt_list
   79              | IF new_lines_op expr new_lines_op THEN stmt_ends_op stmt_list

   80 elsif_stmt: ELSIF new_lines_op expr stmt_ends stmt_list
   81           | ELSIF new_lines_op expr new_lines_op THEN stmt_ends_op stmt_list
   82           | ELSIF new_lines_op expr SEMICOLON_SYMBOL new_lines_op THEN stmt_ends_op stmt_list

   83 elsif_stmt_list: elsif_stmt
   84                | elsif_stmt_list elsif_stmt

   85 if_stmt: if_start_stmt END
   86        | if_start_stmt ELSE stmt_ends_op stmt_list END
   87        | if_start_stmt elsif_stmt_list END
   88        | if_start_stmt elsif_stmt_list ELSE stmt_ends_op stmt_list END

   89 for_stmt: FOR new_lines_op VAR_OR_METHOD_NAME IN new_lines_op expr stmt_ends stmt_list END
   90         | FOR new_lines_op INSTANCE_VAR_NAME IN new_lines_op expr stmt_ends stmt_list END
   91         | FOR new_lines_op VAR_OR_METHOD_NAME IN new_lines_op expr DO stmt_ends_op stmt_list END
   92         | FOR new_lines_op INSTANCE_VAR_NAME IN new_lines_op expr DO stmt_ends_op stmt_list END

   93 while_stmt: WHILE new_lines_op expr stmt_ends stmt_list END
   94           | WHILE new_lines_op expr DO stmt_ends_op stmt_list END

   95 until_stmt: UNTIL new_lines_op expr stmt_ends stmt_list END
   96           | UNTIL new_lines_op expr DO stmt_ends_op stmt_list END

   97 method_param: VAR_OR_METHOD_NAME
   98             | VAR_OR_METHOD_NAME ASSIGN_OP expr

   99 method_params_list: %empty
  100                   | method_params_list_not_empty

  101 method_params_list_not_empty: method_param
  102                             | method_params_list_not_empty COMMA_SYMBOL new_lines_op method_param

  103 def_method_stmt: DEF VAR_OR_METHOD_NAME stmt_ends stmt_list END stmt_ends_op
  104                | DEF VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET method_params_list CLOSE_ROUND_BRACKET stmt_ends_op stmt_list END stmt_ends_op

  105 expr_list: %empty
  106          | expr_list_not_empty

  107 expr_list_not_empty: expr new_lines_op
  108                    | expr_list_not_empty COMMA_SYMBOL new_lines_op expr new_lines_op

  109 class_declaration: CLASS VAR_OR_METHOD_NAME stmt_ends def_method_list_op END stmt_ends
  110                  | CLASS VAR_OR_METHOD_NAME LESS_OP new_lines_op VAR_OR_METHOD_NAME stmt_ends def_method_list_op END stmt_ends

  111 def_method_list_op: %empty
  112                   | def_method_list

  113 def_method_list: def_method_stmt
  114                | def_method_list def_method_stmt


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AND (258) 41
    BEGIN_KEYWORD (259) 76
    CLASS (260) 109 110
    NEW (261)
    DEF (262) 103 104
    DEFINED (263) 39
    DO (264) 91 92 94 96
    IF (265) 77 78 79
    ELSE (266) 86 88
    ELSIF (267) 80 81 82
    END (268) 76 85 86 87 88 89 90 91 92 93 94 95 96 103 104 109 110
    FALSE (269) 13
    FOR (270) 89 90 91 92
    IN (271) 89 90 91 92
    NOT (272) 40
    OR (273) 42
    RETURN (274) 70 71
    SELF (275) 52 53
    SUPER (276) 14 47
    THEN (277) 78 79 81 82
    TRUE (278) 12
    UNTIL (279) 37 95 96
    WHILE (280) 38 93 94
    ARITHMETIC_PLUS_OP (281) 16 22
    ARITHMETIC_MINUS_OP (282) 18 23
    ARITHMETIC_MUL_OP (283) 19
    ARITHMETIC_DIV_OP (284) 20
    ARITHMETIC_MOD_OP (285) 21
    ARITHMETIC_POW_OP (286) 17
    EQL_OP (287) 29
    NOT_EQL_OP (288) 31
    GREATER_OP (289) 24
    LESS_OP (290) 25 110
    GREATER_OR_EQL_OP (291) 26
    LESS_OR_EQL_OP (292) 27
    COMB_COMPRASION_OP (293) 28
    CASE_EQL_OP (294) 30
    ASSIGN_OP (295) 36 98
    LOGICAL_AND_OP (296) 32
    LOGICAL_OR_OP (297) 33
    LOGICAL_NOT_OP (298) 15
    INCLUSIVE_RANGE_OP (299) 34
    EXCLUSIVE_RANGE_OP (300) 35
    OPEN_ROUND_BRACKET (301) 43 46 47 51 53 104
    CLOSE_ROUND_BRACKET (302) 43 46 47 51 53 104
    OPEN_CURLY_BRACKET (303)
    CLOSE_CURLY_BRACKET (304)
    OPEN_SQUARE_BRACKET (305) 44 45
    CLOSE_SQUARE_BRACKET (306) 44 45
    COMMERCIAL_AT (307)
    DOT_SYMBOL (308) 50 51 52 53
    COMMA_SYMBOL (309) 102 108
    SEMICOLON_SYMBOL (310) 54 56 78 82
    NEW_LINE_SYMBOL (311) 55 57 60 61
    STR <string_un> (312) 11
    INTEGER_NUMBER <int_un> (313) 9
    FLOAT_NUMBER <float_un> (314) 10
    VAR_OR_METHOD_NAME <var_name_un> (315) 46 48 50 51 52 53 89 91 97 98 103 104 109 110
    INSTANCE_VAR_NAME <instance_var_name_un> (316) 49 90 92
    CLASS_NAME <class_name_un> (317)
    CLASS_VAR_NAME <class_var_name_un> (318)
    UNARY_MINUS (319)
    UNARY_PLUS (320)


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    program <program_un> (67)
        on left: 1
        on right: 0
    program_item <program_item_un> (68)
        on left: 2 3 4
        on right: 5 6
    program_items_list_not_empty <program_item_list_un> (69)
        on left: 5 6
        on right: 6 8
    program_items_list <program_item_list_un> (70)
        on left: 7 8
        on right: 1
    expr <expr_un> (71)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
        on right: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 50 51 64 70 77 78 79 80 81 82 89 90 91 92 93 94 95 96 98 107 108
    stmt_ends (72)
        on left: 54 55 56 57
        on right: 56 57 63 64 70 71 77 80 89 90 93 95 103 109 110
    new_lines_op (73)
        on left: 58 59
        on right: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 50 51 52 53 77 78 79 80 81 82 89 90 91 92 93 94 95 96 102 107 108 110
    new_lines (74)
        on left: 60 61
        on right: 59 61
    stmt_ends_op (75)
        on left: 62 63
        on right: 65 66 67 68 69 76 78 79 81 82 86 88 91 92 94 96 103 104
    stmt <stmt_un> (76)
        on left: 64 65 66 67 68 69 70 71
        on right: 2 72 73
    stmt_list_not_empty <stmt_list_un> (77)
        on left: 72 73
        on right: 73 75
    stmt_list <stmt_list_un> (78)
        on left: 74 75
        on right: 76 77 78 79 80 81 82 86 88 89 90 91 92 93 94 95 96 103 104
    stmt_block <block_un> (79)
        on left: 76
        on right: 65
    if_start_stmt <if_part_un> (80)
        on left: 77 78 79
        on right: 85 86 87 88
    elsif_stmt <if_part_un> (81)
        on left: 80 81 82
        on right: 83 84
    elsif_stmt_list <elsif_list_un> (82)
        on left: 83 84
        on right: 84 87 88
    if_stmt <stmt_un> (83)
        on left: 85 86 87 88
        on right: 66
    for_stmt <stmt_un> (84)
        on left: 89 90 91 92
        on right: 67
    while_stmt <stmt_un> (85)
        on left: 93 94
        on right: 68
    until_stmt <stmt_un> (86)
        on left: 95 96
        on right: 69
    method_param <method_param_un> (87)
        on left: 97 98
        on right: 101 102
    method_params_list <method_param_list_un> (88)
        on left: 99 100
        on right: 104
    method_params_list_not_empty <method_param_list_un> (89)
        on left: 101 102
        on right: 100 102
    def_method_stmt <def_method_un> (90)
        on left: 103 104
        on right: 3 113 114
    expr_list <expr_list_un> (91)
        on left: 105 106
        on right: 45 46 47 51 53
    expr_list_not_empty <expr_list_un> (92)
        on left: 107 108
        on right: 106 108
    class_declaration <program_item_un> (93)
        on left: 109 110
        on right: 4
    def_method_list_op <def_method_list_un> (94)
        on left: 111 112
        on right: 109 110
    def_method_list <def_method_list_un> (95)
        on left: 113 114
        on right: 112 114


State 0

    0 $accept: . program $end

    BEGIN_KEYWORD        shift, and go to state 1
    CLASS                shift, and go to state 2
    DEF                  shift, and go to state 3
    DEFINED              shift, and go to state 4
    IF                   shift, and go to state 5
    FALSE                shift, and go to state 6
    FOR                  shift, and go to state 7
    NOT                  shift, and go to state 8
    RETURN               shift, and go to state 9
    SELF                 shift, and go to state 10
    SUPER                shift, and go to state 11
    TRUE                 shift, and go to state 12
    UNTIL                shift, and go to state 13
    WHILE                shift, and go to state 14
    ARITHMETIC_PLUS_OP   shift, and go to state 15
    ARITHMETIC_MINUS_OP  shift, and go to state 16
    LOGICAL_NOT_OP       shift, and go to state 17
    OPEN_ROUND_BRACKET   shift, and go to state 18
    OPEN_SQUARE_BRACKET  shift, and go to state 19
    STR                  shift, and go to state 20
    INTEGER_NUMBER       shift, and go to state 21
    FLOAT_NUMBER         shift, and go to state 22
    VAR_OR_METHOD_NAME   shift, and go to state 23
    INSTANCE_VAR_NAME    shift, and go to state 24

    $default  reduce using rule 7 (program_items_list)

    program                       go to state 25
    program_item                  go to state 26
    program_items_list_not_empty  go to state 27
    program_items_list            go to state 28
    expr                          go to state 29
    stmt                          go to state 30
    stmt_block                    go to state 31
    if_start_stmt                 go to state 32
    if_stmt                       go to state 33
    for_stmt                      go to state 34
    while_stmt                    go to state 35
    until_stmt                    go to state 36
    def_method_stmt               go to state 37
    class_declaration             go to state 38


State 1

   76 stmt_block: BEGIN_KEYWORD . stmt_ends_op stmt_list END

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 62 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 42


State 2

  109 class_declaration: CLASS . VAR_OR_METHOD_NAME stmt_ends def_method_list_op END stmt_ends
  110                  | CLASS . VAR_OR_METHOD_NAME LESS_OP new_lines_op VAR_OR_METHOD_NAME stmt_ends def_method_list_op END stmt_ends

    VAR_OR_METHOD_NAME  shift, and go to state 43


State 3

  103 def_method_stmt: DEF . VAR_OR_METHOD_NAME stmt_ends stmt_list END stmt_ends_op
  104                | DEF . VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET method_params_list CLOSE_ROUND_BRACKET stmt_ends_op stmt_list END stmt_ends_op

    VAR_OR_METHOD_NAME  shift, and go to state 44


State 4

   39 expr: DEFINED . new_lines_op expr

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 58 (new_lines_op)

    new_lines_op  go to state 46
    new_lines     go to state 47


State 5

   77 if_start_stmt: IF . new_lines_op expr stmt_ends stmt_list
   78              | IF . new_lines_op expr SEMICOLON_SYMBOL new_lines_op THEN stmt_ends_op stmt_list
   79              | IF . new_lines_op expr new_lines_op THEN stmt_ends_op stmt_list

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 58 (new_lines_op)

    new_lines_op  go to state 48
    new_lines     go to state 47


State 6

   13 expr: FALSE .

    $default  reduce using rule 13 (expr)


State 7

   89 for_stmt: FOR . new_lines_op VAR_OR_METHOD_NAME IN new_lines_op expr stmt_ends stmt_list END
   90         | FOR . new_lines_op INSTANCE_VAR_NAME IN new_lines_op expr stmt_ends stmt_list END
   91         | FOR . new_lines_op VAR_OR_METHOD_NAME IN new_lines_op expr DO stmt_ends_op stmt_list END
   92         | FOR . new_lines_op INSTANCE_VAR_NAME IN new_lines_op expr DO stmt_ends_op stmt_list END

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 58 (new_lines_op)

    new_lines_op  go to state 49
    new_lines     go to state 47


State 8

   40 expr: NOT . new_lines_op expr

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 58 (new_lines_op)

    new_lines_op  go to state 50
    new_lines     go to state 47


State 9

   70 stmt: RETURN . expr stmt_ends
   71     | RETURN . stmt_ends

    DEFINED              shift, and go to state 4
    FALSE                shift, and go to state 6
    NOT                  shift, and go to state 8
    SELF                 shift, and go to state 10
    SUPER                shift, and go to state 11
    TRUE                 shift, and go to state 12
    ARITHMETIC_PLUS_OP   shift, and go to state 15
    ARITHMETIC_MINUS_OP  shift, and go to state 16
    LOGICAL_NOT_OP       shift, and go to state 17
    OPEN_ROUND_BRACKET   shift, and go to state 18
    OPEN_SQUARE_BRACKET  shift, and go to state 19
    SEMICOLON_SYMBOL     shift, and go to state 39
    NEW_LINE_SYMBOL      shift, and go to state 40
    STR                  shift, and go to state 20
    INTEGER_NUMBER       shift, and go to state 21
    FLOAT_NUMBER         shift, and go to state 22
    VAR_OR_METHOD_NAME   shift, and go to state 23
    INSTANCE_VAR_NAME    shift, and go to state 24

    expr       go to state 51
    stmt_ends  go to state 52


State 10

   52 expr: SELF . DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME
   53     | SELF . DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET

    DOT_SYMBOL  shift, and go to state 53


State 11

   14 expr: SUPER .
   47     | SUPER . OPEN_ROUND_BRACKET new_lines_op expr_list CLOSE_ROUND_BRACKET

    OPEN_ROUND_BRACKET  shift, and go to state 54

    $default  reduce using rule 14 (expr)


State 12

   12 expr: TRUE .

    $default  reduce using rule 12 (expr)


State 13

   95 until_stmt: UNTIL . new_lines_op expr stmt_ends stmt_list END
   96           | UNTIL . new_lines_op expr DO stmt_ends_op stmt_list END

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 58 (new_lines_op)

    new_lines_op  go to state 55
    new_lines     go to state 47


State 14

   93 while_stmt: WHILE . new_lines_op expr stmt_ends stmt_list END
   94           | WHILE . new_lines_op expr DO stmt_ends_op stmt_list END

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 58 (new_lines_op)

    new_lines_op  go to state 56
    new_lines     go to state 47


State 15

   16 expr: ARITHMETIC_PLUS_OP . new_lines_op expr

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 58 (new_lines_op)

    new_lines_op  go to state 57
    new_lines     go to state 47


State 16

   18 expr: ARITHMETIC_MINUS_OP . new_lines_op expr

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 58 (new_lines_op)

    new_lines_op  go to state 58
    new_lines     go to state 47


State 17

   15 expr: LOGICAL_NOT_OP . new_lines_op expr

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 58 (new_lines_op)

    new_lines_op  go to state 59
    new_lines     go to state 47


State 18

   43 expr: OPEN_ROUND_BRACKET . new_lines_op expr CLOSE_ROUND_BRACKET

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 58 (new_lines_op)

    new_lines_op  go to state 60
    new_lines     go to state 47


State 19

   45 expr: OPEN_SQUARE_BRACKET . new_lines_op expr_list CLOSE_SQUARE_BRACKET

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 58 (new_lines_op)

    new_lines_op  go to state 61
    new_lines     go to state 47


State 20

   11 expr: STR .

    $default  reduce using rule 11 (expr)


State 21

    9 expr: INTEGER_NUMBER .

    $default  reduce using rule 9 (expr)


State 22

   10 expr: FLOAT_NUMBER .

    $default  reduce using rule 10 (expr)


State 23

   46 expr: VAR_OR_METHOD_NAME . OPEN_ROUND_BRACKET new_lines_op expr_list CLOSE_ROUND_BRACKET
   48     | VAR_OR_METHOD_NAME .

    OPEN_ROUND_BRACKET  shift, and go to state 62

    $default  reduce using rule 48 (expr)


State 24

   49 expr: INSTANCE_VAR_NAME .

    $default  reduce using rule 49 (expr)


State 25

    0 $accept: program . $end

    $end  shift, and go to state 63


State 26

    5 program_items_list_not_empty: program_item .

    $default  reduce using rule 5 (program_items_list_not_empty)


State 27

    6 program_items_list_not_empty: program_items_list_not_empty . program_item
    8 program_items_list: program_items_list_not_empty .

    BEGIN_KEYWORD        shift, and go to state 1
    CLASS                shift, and go to state 2
    DEF                  shift, and go to state 3
    DEFINED              shift, and go to state 4
    IF                   shift, and go to state 5
    FALSE                shift, and go to state 6
    FOR                  shift, and go to state 7
    NOT                  shift, and go to state 8
    RETURN               shift, and go to state 9
    SELF                 shift, and go to state 10
    SUPER                shift, and go to state 11
    TRUE                 shift, and go to state 12
    UNTIL                shift, and go to state 13
    WHILE                shift, and go to state 14
    ARITHMETIC_PLUS_OP   shift, and go to state 15
    ARITHMETIC_MINUS_OP  shift, and go to state 16
    LOGICAL_NOT_OP       shift, and go to state 17
    OPEN_ROUND_BRACKET   shift, and go to state 18
    OPEN_SQUARE_BRACKET  shift, and go to state 19
    STR                  shift, and go to state 20
    INTEGER_NUMBER       shift, and go to state 21
    FLOAT_NUMBER         shift, and go to state 22
    VAR_OR_METHOD_NAME   shift, and go to state 23
    INSTANCE_VAR_NAME    shift, and go to state 24

    $default  reduce using rule 8 (program_items_list)

    program_item       go to state 64
    expr               go to state 29
    stmt               go to state 30
    stmt_block         go to state 31
    if_start_stmt      go to state 32
    if_stmt            go to state 33
    for_stmt           go to state 34
    while_stmt         go to state 35
    until_stmt         go to state 36
    def_method_stmt    go to state 37
    class_declaration  go to state 38


State 28

    1 program: program_items_list .

    $default  reduce using rule 1 (program)


State 29

   17 expr: expr . ARITHMETIC_POW_OP new_lines_op expr
   19     | expr . ARITHMETIC_MUL_OP new_lines_op expr
   20     | expr . ARITHMETIC_DIV_OP new_lines_op expr
   21     | expr . ARITHMETIC_MOD_OP new_lines_op expr
   22     | expr . ARITHMETIC_PLUS_OP new_lines_op expr
   23     | expr . ARITHMETIC_MINUS_OP new_lines_op expr
   24     | expr . GREATER_OP new_lines_op expr
   25     | expr . LESS_OP new_lines_op expr
   26     | expr . GREATER_OR_EQL_OP new_lines_op expr
   27     | expr . LESS_OR_EQL_OP new_lines_op expr
   28     | expr . COMB_COMPRASION_OP new_lines_op expr
   29     | expr . EQL_OP new_lines_op expr
   30     | expr . CASE_EQL_OP new_lines_op expr
   31     | expr . NOT_EQL_OP new_lines_op expr
   32     | expr . LOGICAL_AND_OP new_lines_op expr
   33     | expr . LOGICAL_OR_OP new_lines_op expr
   34     | expr . INCLUSIVE_RANGE_OP new_lines_op expr
   35     | expr . EXCLUSIVE_RANGE_OP new_lines_op expr
   36     | expr . ASSIGN_OP new_lines_op expr
   37     | expr . UNTIL new_lines_op expr
   38     | expr . WHILE new_lines_op expr
   41     | expr . AND new_lines_op expr
   42     | expr . OR new_lines_op expr
   44     | expr . OPEN_SQUARE_BRACKET new_lines_op expr CLOSE_SQUARE_BRACKET
   50     | expr . DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME
   51     | expr . DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET
   64 stmt: expr . stmt_ends

    AND                  shift, and go to state 65
    OR                   shift, and go to state 66
    UNTIL                shift, and go to state 67
    WHILE                shift, and go to state 68
    ARITHMETIC_PLUS_OP   shift, and go to state 69
    ARITHMETIC_MINUS_OP  shift, and go to state 70
    ARITHMETIC_MUL_OP    shift, and go to state 71
    ARITHMETIC_DIV_OP    shift, and go to state 72
    ARITHMETIC_MOD_OP    shift, and go to state 73
    ARITHMETIC_POW_OP    shift, and go to state 74
    EQL_OP               shift, and go to state 75
    NOT_EQL_OP           shift, and go to state 76
    GREATER_OP           shift, and go to state 77
    LESS_OP              shift, and go to state 78
    GREATER_OR_EQL_OP    shift, and go to state 79
    LESS_OR_EQL_OP       shift, and go to state 80
    COMB_COMPRASION_OP   shift, and go to state 81
    CASE_EQL_OP          shift, and go to state 82
    ASSIGN_OP            shift, and go to state 83
    LOGICAL_AND_OP       shift, and go to state 84
    LOGICAL_OR_OP        shift, and go to state 85
    INCLUSIVE_RANGE_OP   shift, and go to state 86
    EXCLUSIVE_RANGE_OP   shift, and go to state 87
    OPEN_SQUARE_BRACKET  shift, and go to state 88
    DOT_SYMBOL           shift, and go to state 89
    SEMICOLON_SYMBOL     shift, and go to state 39
    NEW_LINE_SYMBOL      shift, and go to state 40

    stmt_ends  go to state 90


State 30

    2 program_item: stmt .

    $default  reduce using rule 2 (program_item)


State 31

   65 stmt: stmt_block . stmt_ends_op

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 62 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 91


State 32

   85 if_stmt: if_start_stmt . END
   86        | if_start_stmt . ELSE stmt_ends_op stmt_list END
   87        | if_start_stmt . elsif_stmt_list END
   88        | if_start_stmt . elsif_stmt_list ELSE stmt_ends_op stmt_list END

    ELSE   shift, and go to state 92
    ELSIF  shift, and go to state 93
    END    shift, and go to state 94

    elsif_stmt       go to state 95
    elsif_stmt_list  go to state 96


State 33

   66 stmt: if_stmt . stmt_ends_op

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 62 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 97


State 34

   67 stmt: for_stmt . stmt_ends_op

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 62 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 98


State 35

   68 stmt: while_stmt . stmt_ends_op

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 62 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 99


State 36

   69 stmt: until_stmt . stmt_ends_op

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 62 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 100


State 37

    3 program_item: def_method_stmt .

    $default  reduce using rule 3 (program_item)


State 38

    4 program_item: class_declaration .

    $default  reduce using rule 4 (program_item)


State 39

   54 stmt_ends: SEMICOLON_SYMBOL .
   56          | SEMICOLON_SYMBOL . stmt_ends

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 54 (stmt_ends)

    stmt_ends  go to state 101


State 40

   55 stmt_ends: NEW_LINE_SYMBOL .
   57          | NEW_LINE_SYMBOL . stmt_ends

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 55 (stmt_ends)

    stmt_ends  go to state 102


State 41

   63 stmt_ends_op: stmt_ends .

    $default  reduce using rule 63 (stmt_ends_op)


State 42

   76 stmt_block: BEGIN_KEYWORD stmt_ends_op . stmt_list END

    BEGIN_KEYWORD        shift, and go to state 1
    DEFINED              shift, and go to state 4
    IF                   shift, and go to state 5
    FALSE                shift, and go to state 6
    FOR                  shift, and go to state 7
    NOT                  shift, and go to state 8
    RETURN               shift, and go to state 9
    SELF                 shift, and go to state 10
    SUPER                shift, and go to state 11
    TRUE                 shift, and go to state 12
    UNTIL                shift, and go to state 13
    WHILE                shift, and go to state 14
    ARITHMETIC_PLUS_OP   shift, and go to state 15
    ARITHMETIC_MINUS_OP  shift, and go to state 16
    LOGICAL_NOT_OP       shift, and go to state 17
    OPEN_ROUND_BRACKET   shift, and go to state 18
    OPEN_SQUARE_BRACKET  shift, and go to state 19
    STR                  shift, and go to state 20
    INTEGER_NUMBER       shift, and go to state 21
    FLOAT_NUMBER         shift, and go to state 22
    VAR_OR_METHOD_NAME   shift, and go to state 23
    INSTANCE_VAR_NAME    shift, and go to state 24

    $default  reduce using rule 74 (stmt_list)

    expr                 go to state 29
    stmt                 go to state 103
    stmt_list_not_empty  go to state 104
    stmt_list            go to state 105
    stmt_block           go to state 31
    if_start_stmt        go to state 32
    if_stmt              go to state 33
    for_stmt             go to state 34
    while_stmt           go to state 35
    until_stmt           go to state 36


State 43

  109 class_declaration: CLASS VAR_OR_METHOD_NAME . stmt_ends def_method_list_op END stmt_ends
  110                  | CLASS VAR_OR_METHOD_NAME . LESS_OP new_lines_op VAR_OR_METHOD_NAME stmt_ends def_method_list_op END stmt_ends

    LESS_OP           shift, and go to state 106
    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    stmt_ends  go to state 107


State 44

  103 def_method_stmt: DEF VAR_OR_METHOD_NAME . stmt_ends stmt_list END stmt_ends_op
  104                | DEF VAR_OR_METHOD_NAME . OPEN_ROUND_BRACKET method_params_list CLOSE_ROUND_BRACKET stmt_ends_op stmt_list END stmt_ends_op

    OPEN_ROUND_BRACKET  shift, and go to state 108
    SEMICOLON_SYMBOL    shift, and go to state 39
    NEW_LINE_SYMBOL     shift, and go to state 40

    stmt_ends  go to state 109


State 45

   60 new_lines: NEW_LINE_SYMBOL .
   61          | NEW_LINE_SYMBOL . new_lines

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 60 (new_lines)

    new_lines  go to state 110


State 46

   39 expr: DEFINED new_lines_op . expr

    DEFINED              shift, and go to state 4
    FALSE                shift, and go to state 6
    NOT                  shift, and go to state 8
    SELF                 shift, and go to state 10
    SUPER                shift, and go to state 11
    TRUE                 shift, and go to state 12
    ARITHMETIC_PLUS_OP   shift, and go to state 15
    ARITHMETIC_MINUS_OP  shift, and go to state 16
    LOGICAL_NOT_OP       shift, and go to state 17
    OPEN_ROUND_BRACKET   shift, and go to state 18
    OPEN_SQUARE_BRACKET  shift, and go to state 19
    STR                  shift, and go to state 20
    INTEGER_NUMBER       shift, and go to state 21
    FLOAT_NUMBER         shift, and go to state 22
    VAR_OR_METHOD_NAME   shift, and go to state 23
    INSTANCE_VAR_NAME    shift, and go to state 24

    expr  go to state 111


State 47
